hphp/test/zend/good/ext/openssl/tests/005.php.skipif
<?php 
if (!extension_loaded("openssl")) die("skip"); 
if (!function_exists("utf8_decode")) die("skip");
?>