hphp/test/zend/bad/ext/openssl/tests/bug55646.php.skipif
<?php
if (!function_exists('openssl_csr_new'))
	die('skip no openssl extension');